# ecoli

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/ecoli/: __init__.py
tests/: test_ecoli.py
tests/utils/: test_utils.py
