[tool.poetry]
name = "ecoli"
version = "0.1.0"
description = ""
authors = ["houjinbing <jinbing.hou@polixir.ai>"]
readme = "README.md"
packages = [{include = "ecoli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
